# django_MailingService

./: README.md  manage.py  pyproject.toml
django_MailingService/: asgi.py  settings.py  urls.py  wsgi.py
service/: admin.py  forms.py  models.py  services.py  start_cron.py  urls.py  views.py
service/management/commands/: mailing.py
service/migrations/: 0001_initial.py  0002_initial.py  0003_alter_mailing_time.py  0004_mailinglogs_mailing.py  0005_client_is_active.py
service/templates/service/: base.html  blog_confirm_delete.html  client_list.html  mailing_form.html  mailing_list.html  main.html  message_list.html  post_detail.html  post_list.html
service/templatetags/: group.py
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_phone.py  0003_alter_user_options_user_country_user_email_verify_and_more.py  0003_user_country_user_email_verify_alter_user_is_active_and_more.py
users/templates/registration/: mail_verified.html
users/templates/users/: confirm_email.html  confirm_email_done.html  invalid_veryfi.html  login.html  register.html  user_form.html  verify_email.html
