[tool.poetry]
name = "django-mailingservice"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "django_mailingservice"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.5"
django-crontab = "^0.7.1"
psycopg2-binary = "^2.9.7"
python-dotenv = "^1.0.0"
pillow = "^10.0.0"
django-apscheduler = "^0.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
